--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,9 @@
-# Stage 1: Build
-FROM node:20 AS build
+# frontend/Dockerfile
+
+FROM node:20-alpine
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci
+RUN npm install
 COPY . .
-RUN npm run build
-
-# Stage 2: Serve with nginx
-FROM nginx:stable-alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 3000
+CMD ["npm", "run", "start"]
