--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,8 @@
-# frontend/Dockerfile
-
 FROM node:20-alpine
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 COPY . .
+RUN npm run build
 EXPOSE 3000
-CMD ["npm", "run", "start"]
+CMD ["npm", "start"]
