--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
       SPRING_DATASOURCE_USERNAME: dev
       SPRING_DATASOURCE_PASSWORD: devpass
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
+
+      APP_DEV_MODE: "false"
+      CORS_ALLOWED_ORIGINS: "https://nvg8.witchplease.de"
     ports:
       - "8080:8080"
 
