--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,15 +6,17 @@ spring:
     driver-class-name: org.postgresql.Driver
 
   jpa:
-    hibernate:
-      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    baseline-version: 1
+
 app:
   devMode: ${APP_DEV_MODE:true}
-
-  # Admin Bootstrap (einmalig per ENV aktivieren)
   bootstrapAdmin: ${APP_BOOTSTRAP_ADMIN:false}
   bootstrapAdminEmail: ${APP_BOOTSTRAP_ADMIN_EMAIL:admin@nvg8.de}
   bootstrapAdminPassword: ${APP_BOOTSTRAP_ADMIN_PASSWORD:}
