ShadCN Update Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,11 +6,19 @@ RUN npm ci
 
 COPY . .
 
-# shadcn/ui Komponenten generieren, falls sie fehlen
-RUN if [ ! -f components/ui/card.tsx ]; then \
-    npx --yes shadcn@latest add \
-      card label checkbox progress radio-group select separator sheet skeleton table tabs; \
-  fi
+# shadcn/ui Komponenten installieren/überschreiben (entspricht deinem ui/ Ordner)
+# Wichtig: --overwrite sorgt dafür, dass fehlende/abweichende Dateien zuverlässig passen
+RUN set -eux; \
+  if [ ! -f shadcn.json ]; then \
+    echo "❌ shadcn.json fehlt. Bitte lokal einmal ausführen: npx shadcn@latest init"; \
+    exit 1; \
+  fi; \
+  npx --yes shadcn@latest add \
+    accordion avatar badge button card checkbox \
+    dialog dropdown-menu input label progress radio-group \
+    select separator sheet skeleton sonner table \
+    tabs textarea toggle-group toggle \
+    --overwrite --yes
 
 RUN npm run build
 
