--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -21,22 +21,19 @@ spring:
     baseline-on-migrate: true
 
 app:
-  devMode: ${APP_DEV_MODE:true}
-  bootstrapAdmin: ${APP_BOOTSTRAP_ADMIN:false}
-  bootstrapAdminEmail: ${APP_BOOTSTRAP_ADMIN_EMAIL:admin@nvg8.de}
-  bootstrapAdminPassword: ${APP_BOOTSTRAP_ADMIN_PASSWORD:}
+  devMode: false
 
   cookie:
-    name: token
-    domain: ${APP_COOKIE_DOMAIN:}          # DEV: leer lassen!
-    secure: ${APP_COOKIE_SECURE:false}     # DEV: false
-    sameSite: ${APP_COOKIE_SAMESITE:Lax}   # DEV: Lax
-    maxAgeSeconds: ${APP_COOKIE_MAXAGE:3600}
+    domain: ".witchplease.de"
+    secure: true
+    sameSite: "None"
+    maxAgeSeconds: 3600
 
 cors:
-  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
-  allowed-methods: ${CORS_ALLOWED_METHODS:GET,POST,PUT,PATCH,DELETE,OPTIONS}
-  allow-credentials: ${CORS_ALLOW_CREDENTIALS:true}
+  allowed-origins: "https://nvg8.witchplease.de"
+  allowed-methods: "GET,POST,PUT,PATCH,DELETE,OPTIONS"
+  allow-credentials: true
+
 
 management:
   endpoints:
