--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,72 +1,38 @@
 services:
   postgres:
-    image: postgres:16
-    container_name: nvg8-postgres-dev
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: nvg8db
-      POSTGRES_USER: dev
-      POSTGRES_PASSWORD: devpass
+    container_name: nvg8-dev-postgres
     ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data_dev:/var/lib/postgresql/data
+      - "127.0.0.1:5432:5432"
 
   backend:
-    image: maven:3.9.8-eclipse-temurin-21
-    container_name: nvg8-backend-dev
-    working_dir: /app
-    restart: unless-stopped
-    depends_on:
-      - postgres
+    container_name: nvg8-dev-backend
     environment:
-      SPRING_DATASOURCE_URL: "jdbc:postgresql://postgres:5432/nvg8db"
-      SPRING_DATASOURCE_USERNAME: "dev"
-      SPRING_DATASOURCE_PASSWORD: "devpass"
-      SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
+      SPRING_PROFILES_ACTIVE: dev
 
-      SPRING_FLYWAY_ENABLED: "true"
-      SPRING_FLYWAY_LOCATIONS: "classpath:db/migration"
-      LOGGING_LEVEL_ORG_FLYWAYDB: "DEBUG"
-      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_BOOT_AUTOCONFIGURE_FLYWAY: "DEBUG"
-
+      # Dev: Cookie ohne Domain + nicht Secure + Lax
       APP_DEV_MODE: "true"
-      CORS_ALLOWED_ORIGINS: "http://localhost:3000"
+      APP_COOKIE_DOMAIN: ""
+      APP_COOKIE_SECURE: "false"
+      APP_COOKIE_SAMESITE: "Lax"
 
+      # Dev: Admin bootstrap erlaubt (nur DEV!)
       APP_BOOTSTRAP_ADMIN: "true"
       APP_BOOTSTRAP_ADMIN_EMAIL: "admin@nvg8.de"
-      APP_BOOTSTRAP_ADMIN_PASSWORD: "admin"
+      APP_BOOTSTRAP_ADMIN_PASSWORD: "adminNVG8"
 
-      # Optional: Security debug
-      # LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY: "DEBUG"
+      # Dev: CORS localhost
+      CORS_ALLOWED_ORIGINS: "http://localhost:3000"
+
     ports:
-      - "8080:8080"
-    volumes:
-      - ./backend:/app
-      - m2_cache:/root/.m2
-    command: >
-      bash -lc "mvn -q -DskipTests spring-boot:run"
+      - "127.0.0.1:8080:8080"
 
   frontend:
-    image: node:20-alpine
-    container_name: nvg8-frontend-dev
-    working_dir: /app
-    restart: unless-stopped
-    depends_on:
-      - backend
+    container_name: nvg8-dev-frontend
     environment:
-      # Next rewrites nutzt intern diesen Host
       BACKEND_URL: "http://backend:8080"
-      NEXT_TELEMETRY_DISABLED: "1"
     ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - node_modules_cache:/app/node_modules
-    command: >
-      sh -lc "npm ci || npm install; npm run dev"
+      - "127.0.0.1:3000:3000"
 
 volumes:
-  postgres_data_dev:
-  m2_cache:
-  node_modules_cache:
+  postgres_data:
+    name: nvg8_dev_postgres_data
