--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -174,7 +174,13 @@
             <scope>test</scope>
         </dependency>
 
-
+        <!-- Source: https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.21.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
