Major Frontend Changes

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,12 +1,4 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
+name: Maven (backend)
 
 on:
   push:
@@ -14,22 +6,58 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file backend/pom.xml com.github.ferstl:depgraph-maven-plugin:4.0.1:graph
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      # (Optional but helpful) show where the repo is and where pom.xml files are
+      - name: Debug workspace
+        run: |
+          echo "GITHUB_WORKSPACE=$GITHUB_WORKSPACE"
+          pwd
+          ls -la
+          echo "Searching for pom.xml..."
+          find . -maxdepth 4 -name pom.xml -print
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "21"
+          cache: maven
+
+      - name: Build backend with Maven
+        working-directory: backend
+        run: mvn -B -ntp clean package
+
+      # Generates dependency graph (creates a file like target/dependency-graph.graphml by default
+      # depending on config; you can also configure output in your pom.xml)
+      - name: Generate dependency graph (backend)
+        working-directory: backend
+        run: mvn -B -ntp com.github.ferstl:depgraph-maven-plugin:4.0.1:graph
+
+      - name: Upload backend target/
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-target
+          path: backend/target/
+
+      # If the plugin writes specific files you care about, you can also upload them explicitly.
+      # This is a "best guess" location; adjust if your pom config outputs elsewhere.
+      - name: Upload dependency graph files (if present)
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-depgraph
+          path: |
+            backend/target/*.graphml
+            backend/target/*.dot
+            backend/target/*.gexf
+            backend/target/*depgraph*
+          if-no-files-found: ignore
